style.css
div {
  text-align: center;
}

body {
  background-color: #222 !important;
  color: white !important;
  min-width: fit-content;

  font-family: 'REM', sans-serif !important;
}

p {
  text-align: left;
}


.header {
  background: #ccc !important; /*#555*/
  width: 100% !important;
}

.navbar {
  width: 100%;
  background: #888;
}

.navElement {
  cursor: pointer;
  margin-left: 10px;
  margin-right: 10px;
  text-decoration: none;
  color : white !important;
}

.tag {
  color : #777 !important;
}

.tagBox {
  color : #777 !important;
  text-align: left;
  margin-top: 30px;
  margin-bottom: -5px;
}

.element{
  /*  TODO MAX WIDTH CENTERED*/
  width: 90%;
  margin-left: 5%;
  /* Top right bottom left */
  padding: 30px 20px 30px 20px;
  background-color: rgba(66, 66, 66);
  margin-bottom: 50px;
  border-radius: 20px;

  max-width: 800px;
  margin-left: auto;
  margin-right: auto;

  z-index: 1;
}

.styleElementWrapper{
/*  background-color: rgba(54, 39, 39);*/
/*NOTHING SO FAR BUT MAYBE IF I ADD PRINNER ETC*/
  width: 50px;
  height:1px;
  margin-top: -15px;
  float: left;
  text-align: left;

  display: inline-block;
}

.styleElement{
  width: 20px;
  height: 1px;
  display: inline-block;
  opacity: 30%;

  -webkit-transition: all 0.2s ease;
     -moz-transition: all 0.2s ease;
      -ie-transition: all 0.2s ease;
       -o-transition: all 0.2s ease;
          transition: all 0.2s ease;
}

.styleElement:hover{
  opacity: 50%;
  filter: drop-shadow(0 0 2px rgba(255, 211, 89, 1.0));
}

.elementTitle {
  margin-bottom: 30px;
}

.elementExampleTitle {
  margin-top: 50px;
  margin-bottom: 20px;
}

.elementContents {
  width: 95%;
  margin-left: 2.5%;
  overflow: hidden;

  -webkit-transition: all 0.3s ease;
     -moz-transition: all 0.3s ease;
      -ie-transition: all 0.3s ease;
       -o-transition: all 0.3s ease;
          transition: all 0.3s ease;
}

.seeMore {
  position: relative;
  width: 100%;
}

.seeMoreOverlay {
  height:100px;
  line-height: 100px;
  width: 100%;
  vertical-align: center;
  position: absolute;
  float: left;
  font-size:18px;

  -webkit-backdrop-filter: blur(2px);
  backdrop-filter: blur(2px);

  background: linear-gradient(180deg, rgba(0, 0, 0, 0), rgba(50, 50, 50, .9));
}

.seeMoreOverlay:hover {
  font-size: 20px;

  -webkit-transition: all 0.4s ease;
     -moz-transition: all 0.4s ease;
      -ie-transition: all 0.4s ease;
       -o-transition: all 0.4s ease;
          transition: all 0.4s ease;
}

.seeLessContainer {
  margin-top: 50px;
}

.seeLess{
  color: white;
}

